--- a/docs/style.css
+++ b/docs/style.css
@@ -7,3 +7,29 @@
   width: 40%;
   float: left;
 }
+
+.profile-picture {
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.name{
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.links {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.links li a {
+  text-decoration: none;
+  text-align: center;
+}
