--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 .upper-right-logo {
   margin-top: 20px;
-  height: 600px;
+  height: 100%;
   background-size: contain;
   background-position: right;
   background-repeat: no-repeat;
   width: 40%;
   float: left;
+}
+
+ul {
+ overflow: hidden;
 }
 
 .profile-picture {
